# momografo-proecto-fina

./: .env  .env.example  GestordeTarea.py  README.md  app.py  base.html  cambiar_contra.html  cosas importantes.md  crear_chiste.html  et --hard 7438d19  et --hard dawdaw  index.html  pagina_de_inicio.html  pyproject.toml  recuperar.html  registro.html  tus_chistes.html  ver_chistes.html  ver_chistes_negros.html
templates/: base.html  base_new.html  base_original.html  cambiar_contra.html  crear_chiste.html  esperar_correo.html  index.html  layout.html  pagina_de_inicio.html  recuperar.html  registro.html  tus_chistes.html  umor negro .html  ver_chistes.html  ver_chistes_negros.html
