[project]
name = "momografro-proyecto-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-mail>=0.10.0",
    "pymongo>=4.6.0",
    "python-dotenv>=1.0.0",
]

[tool.uv.workspace]
members = [
    "venv",
]
